SERVER-38119 Windows dump file naming does not account for dots in directory names

(cherry picked from commit ff468c0b65af2cc978aa549d0ec7ed56553abf5a)