src/mongo/util/exception_filter_win32.cpp
@@ -69,7 +69,7 @@ void doMinidumpWithException(struct _EXCEPTION_POINTERS* exceptionInfo) {
         // Fallback name
         wcscpy_s(moduleFileName, L"mongo");
     } else {
-        WCHAR* dotStr = wcschr(&moduleFileName[0], L'.');
+        WCHAR* dotStr = wcsrchr(&moduleFileName[0], L'.');
         if (dotStr != NULL) {
             *dotStr = L'\0';
         }
